# hawk

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-win.sh  build.sh  mingw-toolchain.cmake
.github/workflows/: ci.yml
docs/: architecture.md  design.md  testing.md  walkthrough.md
hawk-cli/: CMakeLists.txt
hawk-cli/src/: args.cpp  args.hpp  constants.hpp  main.cpp  version.hpp.in
hawk-cli/src/cli/: cli_commands.hpp  command_info.hpp  command_table.hpp  command_tables.hpp  commands.hpp  parsers.cpp  parsers.hpp  renderers.cpp  renderers.hpp  repl.cpp  repl.hpp
hawk-cli/src/helpers/: config_builder.cpp  config_builder.hpp  console.cpp  console.hpp  output_decorator.cpp  output_decorator.hpp  spinner.hpp  utils.cpp  utils.hpp
libhawk/: CMakeLists.txt  iwyu.imp
libhawk/include/hawk/: hawk.hpp
libhawk/include/hawk/core/: column.hpp  commands.hpp  filter.hpp  log_file.hpp  parsers.hpp  projection.hpp  record_parser.hpp  record_source.hpp  results.hpp  row.hpp  schema.hpp  session.hpp  session_builder.hpp  session_config.hpp  types.hpp  view.hpp
libhawk/include/hawk/platform/: file_mapping.hpp
libhawk/include/hawk/utils/: datetime_parser.hpp  format_inference.hpp  type_inference.hpp  utils.hpp
libhawk/src/core/: filter.cpp  log_file.cpp  parsers.cpp  projection.cpp  record_parser.cpp  record_source.cpp  row.cpp  schema.cpp  session.cpp  session_builder.cpp  types.cpp  view.cpp
libhawk/src/platform/: file_mapping.cpp  file_mapping_posix.cpp  file_mapping_windows.cpp
libhawk/src/utils/: datetime_parser.cpp  format_inference.cpp  type_inference.cpp  utils.cpp
sample_logs/: auth.csv  sample.csv  walkthrough.hawk
scripts/: check_includes_hawk-cli.sh  check_includes_libhawk.sh
tests/: CMakeLists.txt  cli_utils_test.cpp  datetime_parser_test.cpp  filter_predicate_test.cpp  format_detectors_test.cpp  format_inferer_test.cpp  main.cpp  prepare_filter_test.cpp  projection_test.cpp  range_resolution_test.cpp  resolve_columns_test.cpp  row_search_predicate_test.cpp  schema_test.cpp  session_basics_test.cpp  session_distinct_test.cpp  session_filter_composition_test.cpp  session_filter_test.cpp  session_projection_test.cpp  session_records_test.cpp  session_reset_test.cpp  session_schema_mutation_test.cpp  session_sequences_test.cpp  session_slice_test.cpp  session_sort_test.cpp  smoke.cpp  type_inferer_test.cpp  utils_test.cpp  view_test.cpp
tests/fixtures/: basic.csv  custom_dates.csv  nullable.csv  sort_stability.csv  strings_only.csv
tests/support/: memory_record_source.hpp  session_fixture.hpp
